--- a/package.json
+++ b/package.json
@@ -26,12 +26,10 @@
     "README.md",
     "package.json"
   ],
-  "dependencies": {
-    "firebase": "3.x.x"
-  },
+  "dependencies": {},
   "peerDependencies": {
     "angular": "^1.3.0",
-    "firebase": "3.x.x"
+    "firebase": "4.x.x"
   },
   "devDependencies": {
     "angular": "^1.3.0",
